--- a/views/questions/modify-questions.ejs
+++ b/views/questions/modify-questions.ejs
@@ -26,14 +26,16 @@
                   id="edit-btn"
                   onclick="location.href='/modify-questions/<%= question._id %>/edit'"
                 >
-                  Edit
+                  <i class="bi bi-pencil"></i>
                 </button>
                 <form
                   method="post"
                   action="/modify-questions/<%= question._id %>/delete"
                   class="d-inline-block w-50"
                 >
-                  <button id="delete-btn" type="submit">Delete</button>
+                  <button id="delete-btn" type="submit">
+                    <i class="bi bi-trash"></i>
+                  </button>
                 </form>
               </td>
             </tr>
