--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -221,8 +221,6 @@ html, body {
 .box {
     background-color: rgba(255, 255, 255, 0.6) !important;
     border: 2px solid rgba(37, 104, 251, 1);
-
-    /* border: 1px solid #fff; */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
 }
@@ -240,9 +238,18 @@ html, body {
     min-height: 200px;
 }
 
+#submit-rating {
+    background-color: #2568fb;
+    color: #ffffff;
+    border: none;
+    font-weight: 700;
+    font-size: 1.2rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+
 #show-answer {
     background-color: #2568fb;
-
     color: #ffffff;
     border: none;
     font-weight: 700;
